@@ -4,6 +4,9 @@ export(bigPalette)
 export(clusterExperiment)
 export(clusterFunction)
 export(internalFunctionCheck)
+export(listBuiltInFunctions)
+export(listBuiltInType01)
+export(listBuiltInTypeK)
 export(makeBlankData)
 export(nFeatures)
 export(nSamples)
@@ -48,9 +51,6 @@ exportMethods(getBestFeatures)
 exportMethods(getBuiltInFunction)
 exportMethods(getPostProcessingArgs)
 exportMethods(inputType)
-exportMethods(listBuiltInFunctions)
-exportMethods(listBuiltInType01)
-exportMethods(listBuiltInTypeK)
 exportMethods(mainClustering)
 exportMethods(makeDendrogram)
 exportMethods(mergeClusters)
