@@ -41,6 +41,8 @@
 \S4method{inputType}{factor}(object)
 }
 \arguments{
+\item{object}{input to the method, usually either a \code{ClusterFunction} class or a character describing a built-in \code{ClusterFunction} object.}
+
 \item{genericOnly}{logical If TRUE, return only the generic required arguments (i.e. those required by the algorithm type) and not the arguments specific to that clustering found in the slot \code{requiredArgs}. If FALSE both sets of arguments are returned.}
 }
 \description{
