@@ -1,23 +1,24 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/builtInClusterFunctions.R
 \docType{methods}
-\name{listBuiltInFunctions,ANY-method}
-\alias{listBuiltInFunctions,ANY-method}
+\name{listBuiltInFunctions}
+\alias{listBuiltInFunctions}
 \alias{getBuiltInFunction,character-method}
 \alias{getBuiltInFunction}
-\alias{listBuiltInTypeK,ANY-method}
 \alias{listBuiltInTypeK}
-\alias{listBuiltInType01,ANY-method}
 \alias{listBuiltInType01}
 \title{Built in ClusterFunction options}
 \usage{
-\S4method{listBuiltInFunctions}{ANY}(object)
+listBuiltInFunctions()
 
 \S4method{getBuiltInFunction}{character}(object)
 
-\S4method{listBuiltInTypeK}{ANY}(object)
+listBuiltInTypeK(object)
 
-\S4method{listBuiltInType01}{ANY}(object)
+listBuiltInType01(object)
+}
+\arguments{
+\item{object}{unneeded argument.}
 }
 \description{
 Documents the built-in clustering options that are available in
