@@ -20,7 +20,7 @@ the clustering routine. See \code{\link{ClusterFunction}} for required
 format of user-defined clustering routines. User can also give a character
 value to the argument \code{clusterFunction} to indicate the use of
 clustering routines provided in package. Type
-\code{\link{listBuiltInFunctions()}} at command prompt to see the built-in
+\code{\link{listBuiltInFunctions}} at command prompt to see the built-in
 clustering routines. If \code{clusterFunction} is missing, the default is
 set to "pam".}
 
